--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,4 +1,6 @@
 <div id="<%= dom_id product %>">
+
+<p>*image goes here*</p>
   <p>
     <strong>Name:</strong>
     <%= product.name %>
@@ -23,5 +25,6 @@
     <strong>Price:</strong>
     <%= product.price %>
   </p>
-
+<p><%= link_to "Link to product", product %></p>
+<p>*add add to cart button*</p>
 </div>
