added styling on home page

--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
-  <h1>Home#home</h1>
-  <p>Find me in app/views/home/home.html.erb</p>
+  <h1>All Products</h1>
+  <p>Sorted newest to oldest</p>
 
   <div class="row row-cols-4">
     <% @products.each do |product| %>
