--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,11 +1,22 @@
- <div class="topnav">
+ <div style="margin: auto;
+  width: 50%;
+  border: 3px solid black;
+  padding: 10px;">
 
   <%= link_to root_path do %>
    <%= image_tag "rarityLogoSmall.png", height: 30%>
   <% end %>
 
 
-  <a href="#news">Categories</a>
-  <a href="#contact">Designers</a>
-  <a href="#about">Cart</a>
+  <a href="#PLACEHOLDER">Categories</a>
+  <a href="#PLACEHOLDER">Designers</a>
+  <a href="#PLACEHOLDER">Cart</a>
+
+  <div style="width:50%">
+  <%= form_with(url:search_products_path, method: :get, local: true) do  %>
+          <%= text_field_tag(:keywords, nil, class: "input", placeholder: "Search for a product") %>
+          <%= submit_tag("Search", class: "button is-primary") %>
+  <% end %>
+
+
 </div>
