added relation between products and categories

--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,5 +1,7 @@
 <div id="<%= dom_id product %>">
 
+
+
 <p>*image goes here*</p>
   <p>
     <strong>Name:</strong>
@@ -9,6 +11,11 @@
   <p>
     <strong>Designer:</strong>
     <%= product.designer %>
+  </p>
+
+  <p>
+    <strong>Category:</strong>
+    <%= product.category.category %>
   </p>
 
   <p>
