removed ability for any user to add items

--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -37,6 +37,11 @@
   </div>
 
   <div>
+    <%= form.label :category_id, style: "display: block" %>
+    <%= form.text_field :category_id %>
+  </div>
+
+  <div>
     <%= form.submit %>
   </div>
 <% end %>
