added kaminari gem and pagination

--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -5,5 +5,6 @@
     <% @products.each do |product| %>
       <%= render product %>
     <% end %>
+    <%= paginate @products %>
     </div>
 </div>
