--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -8,7 +8,7 @@
   <% end %>
 
   <%= link_to "Categories", category_index_path %>
-  <a href="#PLACEHOLDER">Cart</a>
+  <a href="#PLACEHOLDER">Checkout</a>
 
   <div style="width:50%">
   <%= form_with(url:search_products_path, method: :get, local: true) do  %>
