--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -11,7 +11,7 @@
   <a href="#PLACEHOLDER">Checkout</a>
 
   <div style="width:50%">
-  <%= form_with(url:search_products_path, method: :get, local: true) do  %>
+  <%= form_with(url:search_path, method: :get, local: true) do  %>
           <%= text_field_tag(:keywords, nil, class: "input", placeholder: "Search for a product") %>
           <%= submit_tag("Search", class: "button") %>
   <% end %>
