removed styling and messed with image processing

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
   </head>
 
   <body>
+  <div class="container">
   <%= render 'layouts/nav'%>
   <p><%= notice %></p>
   <p><%= alert %></p>
@@ -39,5 +40,6 @@
   <% end %>
       </details>
     <%= yield %>
+    </div>
   </body>
 </html>
