testing with checkout cart routes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,10 +30,19 @@
     <ul>
       <% cart.each do |product| %>
         <li>
-          <%= product.name %>
-          <%= button_to 'Remove from cart', cart_path(product), method: :delete, class: 'btn btn-link' %>
+        <%= image_tag product.image, :size => '30x30' %>
+          <%= link_to product.name, product %> |
+          $<%= product.price %>
+
+
+
+          <%= link_to 'Remove from cart', cart_path(product), method: :delete, class: 'btn btn-link' %>
         </li>
   <% end %>
+  <%= form_with url: cart_path(cart), method: :post do %>
+    <%= hidden_field_tag :id, cart %>
+    <%= button_tag 'Checkout', class: 'btn btn-success' %>
+  <% end%>
     </ul>
 <% else %>
   <p>No items in your cart.</p>
