--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -44,6 +44,7 @@
   <% else%>
   <%= form_with url: cart_index_path, method: :post do %>
     <%= hidden_field_tag :id, product.id %>
+    <%= hidden_field_tag :quantity, '1'%>
     <%= button_tag 'Add to Cart', class: 'btn btn-primary' %>
     <% end%>
   <% end %>
