--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,15 +5,11 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
-
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
-
   <body>
   <div class="container">
   <%= render 'layouts/nav'%>
@@ -31,10 +27,19 @@
     <ul>
       <% cart.each do |product| %>
         <li>
-        <%= image_tag product.image, :size => '30x30' %>
+
+
+
+
+          <%= form_with url: cart_update_path, method: :post do %>
+            <%= hidden_field_tag :id, product.id %>
+          <%= image_tag product.image, :size => '30x30' %>
           <%= link_to product.name, product %> |
-          $<%= product.price %> |
-          <%= session[:quantity].index(2)%>
+          $<%= product.price.to_f %> |
+          Qty:<%= select_tag :quantity, options_for_select(1..10, session[:quantity]), onchange: "this.form.submit();"%>
+
+          <% end%>
+
 
 
 
