--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
           <%= image_tag product.image, :size => '30x30' %>
           <%= link_to product.name, product %> |
           $<%= product.price.to_f %> |
-          Qty:<%= select_tag :quantity, options_for_select(1..10, session[:quantity]), onchange: "this.form.submit();"%>
+          Qty:<%= select_tag :quantity, options_for_select(1..10, session[:quantity][session[:cart].index(product.id)]), onchange: "this.form.submit();"%>
 
           <% end%>
 
