--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,8 +1,14 @@
   <%= link_to root_path do %>
    <%= image_tag "rarityLogoSmall.png", height: 30%>
   <% end %>
-
   <%= link_to "Categories", category_index_path %>
+
+  <% if user_signed_in? %>
+  | Logged in as <%= current_user.email %> |
+    <%= link_to "Log out", destroy_user_session_path, :method=>'delete'%>
+  <% else %>
+    <%= link_to "login", new_user_session_path %>
+  <% end %>
 
   <div style="width:50%">
   <%= form_with(url:search_path, method: :get, local: true) do  %>
