--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -5,6 +5,7 @@
 
   <% if user_signed_in? %>
   | Logged in as <%= current_user.email %> |
+    <%= link_to "Edit account", profile_edit_path %> |
     <%= link_to "Log out", destroy_user_session_path, :method=>'delete'%>
   <% else %>
   |  <%= link_to "Login", new_user_session_path %>
