--- a/app/views/profile/edit.html.erb
+++ b/app/views/profile/edit.html.erb
@@ -12,7 +12,7 @@
       <%= address.city %>,
       <%= address.province.province %><br/>
       <%= address.postalcode %>
-      <%= button_to remove_address_path(address), method: :get, class: 'btn btn-danger' do%>
+      <%= button_to remove_address_path, params: {id: address}, method: :get, class: 'btn btn-danger' do%>
       Remove address
       <% end %>
       </div>
