--- a/app/views/checkout/receipt.html.erb
+++ b/app/views/checkout/receipt.html.erb
@@ -1,2 +1,10 @@
-<h1>Checkout#receipt</h1>
+<h1>Order Placed!</h1>
 <p>Find me in app/views/checkout/receipt.html.erb</p>
+
+<% @tax_rate%>
+<% @tax_percent%>
+<% params[:tax_rate]%>
+<% params[:user_id]%>
+<% params[:sub_total]%>
+<% params[:tax_total]%>
+<% params[:grand_total]%>
