--- a/app/views/checkout/receipt.html.erb
+++ b/app/views/checkout/receipt.html.erb
@@ -1,10 +1,3 @@
 <h1>Order Placed!</h1>
-<p>Find me in app/views/checkout/receipt.html.erb</p>
+<%= link_to "View past orders here", profile_edit_path%>
 
-<% @tax_rate%>
-<% @tax_percent%>
-<% params[:tax_rate]%>
-<% params[:user_id]%>
-<% params[:sub_total]%>
-<% params[:tax_total]%>
-<% params[:grand_total]%>
